--- a/pages/kds.html
+++ b/pages/kds.html
@@ -63,15 +63,17 @@
     <div class="mb-5">
       <!-- Lateset version -->
       <div class="card mb-3">
-        <h5 class="card-header">V1.5.1 (Mới nhất) - 18/06/2025</h5>
+        <h5 class="card-header">V1.5.5 (Mới nhất) - 11/11/2025</h5>
         <div class="card-body">
           <h5 class="card-title">Chi tiết cập nhật:</h5>
           <ul>
-            <li>Fix vào chậm món order</li>
-            </li>
+            <li>Fix bộ lọc tìm kiếm quản lý món</li>
+            <li>Đánh dấu hiển thị món combo</li>
+            <li>Tắt in có dấu</li>
+            <li>Cải thiện hiệu suất và ổn định.</li>
           </ul>
           <a
-            href="/assets/files/kds/android/AKDS_V151_Tablet_Hotfix.apk"
+            href="/assets/files/kds/android/AKDS_V155_30_Tablet.apk"
             class="btn btn-primary"
             ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
           >
@@ -79,9 +81,9 @@
       </div>
       <!-- End lateset version -->
     </div>
-    <p>
+    <!-- <p>
       <a href="/assets/files/kds/android/AKDS_V155_30_Tablet.apk">Beta - KDS 1.5.5+30 Tablet</a> (Phiên bản thử nghiệm)
-    </p>
+    </p> -->
     <!-- Old version -->
     <div class="mb-5">
       <a
@@ -91,6 +93,22 @@
         >Phiên bản cũ hơn ↓</a
       >
       <div id="oldVersion" class="collapse">
+        <!-- 1.5.1 -->
+        <div class="card mb-3">
+          <h5 class="card-header">V1.5.1 - 18/06/2025</h5>
+          <div class="card-body">
+            <h5 class="card-title">Chi tiết cập nhật:</h5>
+            <ul>
+              <li>Fix vào chậm món order</li>
+              </li>
+            </ul>
+            <a
+              href="/assets/files/kds/android/AKDS_V151_Tablet_Hotfix.apk"
+              class="btn btn-primary"
+              ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
+            >
+          </div>
+        </div>
         <!-- 1.5.0 -->
          <div class="card mb-3">
         <h5 class="card-header">V1.5.0 (Mới nhất) - 29/05/2025</h5>
