--- a/pages/kds.html
+++ b/pages/kds.html
@@ -63,17 +63,14 @@
     <div class="mb-5">
       <!-- Lateset version -->
       <div class="card mb-3">
-        <h5 class="card-header">V1.5.5 (Mới nhất) - 11/11/2025</h5>
+        <h5 class="card-header">V1.5.6 (Mới nhất) - 01/12/2025</h5>
         <div class="card-body">
           <h5 class="card-title">Chi tiết cập nhật:</h5>
           <ul>
-            <li>Fix bộ lọc tìm kiếm quản lý món</li>
-            <li>Đánh dấu hiển thị món combo</li>
-            <li>Tắt in có dấu</li>
-            <li>Cải thiện hiệu suất và ổn định.</li>
+            <li>Hotfix - Lỗi in với kí tự bộ gõ TCVN</li>
           </ul>
           <a
-            href="/assets/files/kds/android/AKDS_V155_30_Tablet.apk"
+            href="/assets/files/kds/android/AKDS_V156_31_Tablet.apk"
             class="btn btn-primary"
             ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
           >
@@ -93,6 +90,24 @@
         >Phiên bản cũ hơn ↓</a
       >
       <div id="oldVersion" class="collapse">
+        <!-- 1.5.5 -->
+        <div class="card mb-3">
+          <h5 class="card-header">V1.5.5 - 11/11/2025</h5>
+          <div class="card-body">
+            <h5 class="card-title">Chi tiết cập nhật:</h5>
+            <ul>
+              <li>Fix bộ lọc tìm kiếm quản lý món</li>
+              <li>Đánh dấu hiển thị món combo</li>
+              <li>Tắt in có dấu</li>
+              <li>Cải thiện hiệu suất và ổn định.</li>
+            </ul>
+            <a
+              href="/assets/files/kds/android/AKDS_V155_30_Tablet.apk"
+              class="btn btn-primary"
+              ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
+            >
+          </div>
+        </div>
         <!-- 1.5.1 -->
         <div class="card mb-3">
           <h5 class="card-header">V1.5.1 - 18/06/2025</h5>
