--- a/pages/receptionist.html
+++ b/pages/receptionist.html
@@ -63,23 +63,20 @@
     <div class="mb-5">
       <!-- Lateset version -->
       <div class="card mb-3">
-        <h5 class="card-header">V1.0.3 (Mới nhất) - 07/07/2025</h5>
+        <h5 class="card-header">V1.0.4 (Mới nhất) - 08/12/2025</h5>
         <div class="card-body">
           <h5 class="card-title">Chi tiết cập nhật:</h5>
           <ul>
-            <li>Thay đổi nguồn khách đặt bàn</li>
-            <li>
-              Tự động hoàn thành lịch đặt bàn nếu đơn bàn đã được thanh toán
-            </li>
-            <!-- Bỏ qua việc tải lại dữ liệu lịch đặt bàn nếu không cần thiết (android) -->
+            <li>Thêm giao diện để sắp xếp bố trí bàn tại NH</li>
+            <li>Tuỳ chọn hiển thị đối với danh sách lịch đặt bàn</li>
           </ul>
           <a
-            href="/assets/files/reception/android/A_Reception_V103_Tablet.apk"
+            href="/assets/files/reception/android/A_Reception_V104_Tablet.apk"
             class="btn btn-primary"
             ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
           >
           <a
-            href="/assets/files/reception/windowns/A_Reception_V103_Desktop.exe"
+            href="/assets/files/reception/windowns/A_Reception_V104_Desktop.exe"
             class="btn btn-primary"
             ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
           >
@@ -96,6 +93,30 @@
         >Phiên bản cũ hơn ↓</a
       >
       <div id="oldVersion" class="collapse">
+        <!-- 1.0.3 + 4 -->
+        <div class="card mb-3">
+          <h5 class="card-header">V1.0.3 - 07/07/2025</h5>
+          <div class="card-body">
+            <h5 class="card-title">Chi tiết cập nhật:</h5>
+            <ul>
+              <li>Thay đổi nguồn khách đặt bàn</li>
+              <li>
+                Tự động hoàn thành lịch đặt bàn nếu đơn bàn đã được thanh toán
+              </li>
+              <!-- Bỏ qua việc tải lại dữ liệu lịch đặt bàn nếu không cần thiết (android) -->
+            </ul>
+            <a
+              href="/assets/files/reception/android/A_Reception_V103_Tablet.apk"
+              class="btn btn-primary"
+              ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
+            >
+            <a
+              href="/assets/files/reception/windowns/A_Reception_V103_Desktop.exe"
+              class="btn btn-primary"
+              ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
+            >
+          </div>
+        </div>
         <!-- 1.0.2 + 3 -->
         <div class="card mb-3">
           <h5 class="card-header">V1.0.2 (Mới nhất) - 23/04/2025</h5>
