--- a/pages/receptionist.html
+++ b/pages/receptionist.html
@@ -63,20 +63,20 @@
     <div class="mb-5">
       <!-- Lateset version -->
       <div class="card mb-3">
-        <h5 class="card-header">V1.0.4 (Mới nhất) - 08/12/2025</h5>
+        <h5 class="card-header">V1.0.5 (Mới nhất) - 13/01/2026</h5>
         <div class="card-body">
           <h5 class="card-title">Chi tiết cập nhật:</h5>
           <ul>
-            <li>Thêm giao diện để sắp xếp bố trí bàn tại NH</li>
-            <li>Tuỳ chọn hiển thị đối với danh sách lịch đặt bàn</li>
+            <li>Bổ sung trạng thái lịch đặt bàn Booking (Gọi điện)</li>
+            <li>Bổ sung giới tính khách đặt bàn</li>
           </ul>
           <a
-            href="/assets/files/reception/android/A_Reception_V104_Tablet.apk"
+            href="/assets/files/reception/android/A_Reception_V105_Tablet.apk"
             class="btn btn-primary"
             ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
           >
           <a
-            href="/assets/files/reception/windowns/A_Reception_V104_Desktop.exe"
+            href="/assets/files/reception/windowns/A_Reception_V105_Desktop.exe"
             class="btn btn-primary"
             ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
           >
@@ -93,6 +93,27 @@
         >Phiên bản cũ hơn ↓</a
       >
       <div id="oldVersion" class="collapse">
+        <!-- 1.0.4 + 5 -->
+        <div class="card mb-3">
+          <h5 class="card-header">V1.0.4 - 08/12/2025</h5>
+          <div class="card-body">
+            <h5 class="card-title">Chi tiết cập nhật:</h5>
+            <ul>
+              <li>Thêm giao diện để sắp xếp bố trí bàn tại NH</li>
+              <li>Tuỳ chọn hiển thị đối với danh sách lịch đặt bàn</li>
+            </ul>
+            <a
+              href="/assets/files/reception/android/A_Reception_V104_Tablet.apk"
+              class="btn btn-primary"
+              ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
+            >
+            <a
+              href="/assets/files/reception/windowns/A_Reception_V104_Desktop.exe"
+              class="btn btn-primary"
+              ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
+            >
+          </div>
+        </div>
         <!-- 1.0.3 + 4 -->
         <div class="card mb-3">
           <h5 class="card-header">V1.0.3 - 07/07/2025</h5>
