--- a/pages/kds.html
+++ b/pages/kds.html
@@ -63,25 +63,12 @@
     <div class="mb-5">
       <!-- Lateset version -->
       <div class="card mb-3">
-        <h5 class="card-header">V1.5.6 (Mới nhất) - 01/12/2025</h5>
+        <h5 class="card-header">V1.5.7 (Mới nhất) - 19/01/2026</h5>
         <div class="card-body">
           <h5 class="card-title">Chi tiết cập nhật:</h5>
           <ul>
-            <li>Hotfix - Lỗi in với kí tự bộ gõ TCVN</li>
-          </ul>
-          <a
-            href="/assets/files/kds/android/AKDS_V156_31_Tablet.apk"
-            class="btn btn-primary"
-            ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
-          >
-        </div>
-      </div>
-      <!-- <div class="card mb-3">
-        <h5 class="card-header">V1.5.7 (Mới nhất) - 22/12/2025</h5>
-        <div class="card-body">
-          <h5 class="card-title">Chi tiết cập nhật:</h5>
-          <ul>
-            <li>Bật / tắt chức năng khoá món</li>
+            <li>Hotfix - Lỗi tràn tên món ở bill lẻ</li>
+            <!-- <li>Bật / tắt chức năng khoá món</li> -->
           </ul>
           <a
             href="/assets/files/kds/android/AKDS_V157_32_Tablet.apk"
@@ -89,7 +76,7 @@
             ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
           >
         </div>
-      </div> -->
+      </div>
       <!-- End lateset version -->
     </div>
     <!-- <p>
