kds,manager: bat tat khoa mon

--- a/pages/kds.html
+++ b/pages/kds.html
@@ -68,7 +68,7 @@
           <h5 class="card-title">Chi tiết cập nhật:</h5>
           <ul>
             <li>Hotfix - Lỗi tràn tên món ở bill lẻ</li>
-            <!-- <li>Bật / tắt chức năng khoá món</li> -->
+            <li>Bật / tắt chức năng khoá món</li>
           </ul>
           <a
             href="/assets/files/kds/android/AKDS_V157_32_Tablet.apk"
